--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  functions = "functions"
-  publish = "public"
+  functions = "functions"  # Correct directory for chat.js
+  publish = "public"      # Correct publish directory
